# 2D-Test-Track-Planner

./: .gitignore  README.md
.devcontainer/: Dockerfile  docker-compose.yml  doxygen.mustache
install/: local_setup.sh  setup.sh
planner/configs/: env_vars.sh  key_points.csv  nodes_launch.yaml  planner.launch.py  routines.yaml  startPlanner.sh
planner/configs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
planner/docs/: homework.md  integration_engineer_project.md  running_dev_container.md
planner/ros2/src/graphics/: package.xml  setup.cfg  setup.py
planner/ros2/src/graphics/graphics/: __init__.py  node_visual_gui.py
planner/ros2/src/graphics/utils/: python_utils.py
planner/ros2/src/interfaces/: CMakeLists.txt
planner/ros2/src/interfaces/include/modules/: speaker.hpp
planner/ros2/src/interfaces/src/: interfaces_node.cpp
planner/ros2/src/interfaces/src/modules/: speaker.cpp
planner/ros2/src/kiwibot/: package.xml  setup.cfg  setup.py
planner/ros2/src/kiwibot/kiwibot/: node_kiwibot.py
planner/ros2/src/path_planner/: package.xml  setup.cfg  setup.py
planner/ros2/src/path_planner/path_planner/: node_planner.py
planner/ros2/src/usr_msgs/: CMakeLists.txt  package.xml
planner/ros2/src/usr_msgs/msg/bot_status/: Kiwibot.msg
planner/ros2/src/usr_msgs/msg/path_planner/: LandMark.msg  Planner.msg  TurnRef.msg  Waypoint.msg
planner/ros2/src/usr_srvs/: CMakeLists.txt  package.xml
planner/ros2/src/usr_srvs/srv/robot/: Move.srv  Turn.srv
planner/ros2/src/utils/: CMakeLists.txt  package.xml
planner/ros2/src/utils/include/utils/: console.hpp
planner/ros2/src/utils/lib/: console.cpp
